--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trabill-ota-v2",
+  "name": "booking-expert-v2",
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
