--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@types/multer-s3": "^3.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
 }
