--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w"
   },
   "keywords": [],
-  "author": "Md Mahmudul Islam Moon",
+  "author": "Md Mahmudul Islam Moon - mahmodulislammoon@gmail.com",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
