--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
+    "puppeteer": "^24.8.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
