--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "luxon": "^3.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -36,6 +37,8 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.20",
+    "@types/luxon": "^3.7.1",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
