--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["bullmq", "CAPI", "Ilike", "Sammo", "Umrah"]
+  "cSpell.words": [
+    "bullmq",
+    "CAPI",
+    "Ilike",
+    "Sammo",
+    "Umrah",
+    "Verteil"
+  ]
 }
